2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.5 ===

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/daemon-main.c:
        * daemon/main.c:
	Include locate.h for setlocale

2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* hal/hal-device.c:
	Use gi18n-lib.h, not gi18n.h in client side code.

2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfile.c (g_daemon_file_move):
	Fix typo G_DAEMON_FILE -> G_IS_DAEMON_FILE

	* configure.ac:
	Require glib >= 2.15.4

        * client/gdaemonvfs.c:
        * client/gdaemonvolumemonitor.c:
        * hal/ghalvolumemonitor.c:
	Register with the new extension points API.

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendlocaltest.c:
        * programs/gvfs-cat.c:
	C89 fixes from Jens Granseuer (#511838)

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/daemon-main.c:
        * daemon/main.c:
	Enable translations for daemons and some l10n
	fixes. Patch from Luca Ferretti.

2008-01-24  Matthias Clasen  <mclasen@redhat.com>

	* daemon/gvfsbackendsmbbrowse.c
	(get_file_info_from_entry): Replace : by :: in 
	smb::comment, too.

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
	Update intltool req for po/LINGUAS

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
	Remove debug spew.
	
        * hal/ghaldrive.c:
        * hal/ghalvolume.c:
	Implement identifier getters
	
        * programs/gvfs-mount.c:
	Show identifiers

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
	Indentation fix
	
        * hal/ghaldrive.[ch]:
        * hal/hal-device.c:
        * hal/ghalvolume.c:
        * hal/ghalmount.c:
	Clean up coding style
	
        * hal/ghalvolumemonitor.[ch]:
	Clean up coding style