@@ -1,3 +1,8 @@
+2008-01-29  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/Makefile.am:
+	Always dist all .mount.in files
+	
 2008-01-28  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.ac:
